@@ -6,7 +6,6 @@ getItem ()
 	local result=echo $selection|awk -F@ '{print $1}'
 	local inputs
 	local result
-echo "---------------->>>>>" >/dev/pts/2
 
 	GOTYADQT=$(which yadqt 2>/dev/null)
 	if [[ $? -eq 0 ]];then
