@@ -474,7 +474,7 @@ QStringList KKEditClass::getNewRecursiveTagList(QString filepath,int sorttype)
 				break;
 		}
 
-	command=QString("find \"%1\" -maxdepth %2|ctags -L - -x|%3|sed 's@ \\+@ @g'").arg(filepath).arg(this->prefsDepth).arg(sort);
+	command=QString("find \"%1\" -maxdepth %2|ctags -L - -Gx|%3|sed 's@ \\+@ @g'").arg(filepath).arg(this->prefsDepth).arg(sort);
 	results=this->runPipeAndCapture(command);
 	retval=results.split("\n",Qt::SkipEmptyParts);
 	return(retval);
