@@ -1,4 +1,6 @@
 1.6.0
+Better file type quess for functions.
+Fixed finding definition on files with spaces in the path.
 Updated html tags help.
 More html tags.
 Added input to controls in htmltags.
